--- a/style.css
+++ b/style.css
@@ -148,7 +148,9 @@ header{
   height: 60vh;
   border-radius: 20px;
   background-image: url(Image/card-bg.jpeg);
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
 .innovation-section{
@@ -299,4 +301,25 @@ footer .part1 ul{
   height: 40vh;
   border-radius: 20px;
   border: 2px solid white;
+}
+
+
+.card-img{
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.card-img img {
+  width: 250%;
+}
+.card-content{
+  color: black;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
