--- a/style.css
+++ b/style.css
@@ -3,6 +3,51 @@
   src: url(Lexend_Deca/LexendDeca-VariableFont_wght.ttf);
 }
 
+@keyframes up-down-motion{
+  0%{
+    transform: translateY(0px);
+  }
+  50%{
+    transform: translateY(-19px);
+  }
+  100%{
+    transform: translateY(0px);
+  }
+
+}
+@keyframes nagetive-up-down{  
+  25%{
+    transform: translateY(25px);
+  }
+  50%{
+    transform: translateY(-25px);
+  }
+  75%{
+    transform: translateY(25px);
+  }
+  100%{
+    transform: translateY(-25px);
+  }
+
+}
+
+@keyframes rotation-motion{
+  0%{
+    transform: rotate(0deg);
+  }
+  25%{
+    transform: rotate(90deg);
+  }
+  50%{
+    transform: rotate(180deg);
+  }
+  75%{
+    transform: rotate(270deg);
+  }
+  100%{
+    transform: rotate(360deg);
+  }
+}
 
 *{
   padding: 0px;
@@ -50,15 +95,29 @@ header{
   font-family: 'anton';
 }
 
-.loging button{
- padding: 10px 20px;
- border-radius: 18px;
- border: none;
- background-color: #6f6fc5; 
- color: white;
- font-size: 1rem;
+.nav-option ul li:hover{
+  border-bottom: 4px solid #7fdada;
+  transition: 100ms;
+  cursor: default; 
+  text-decoration: none !important; 
 }
 
+
+
+.loging button{
+ padding: 11px 30px;
+ border-radius: 45px;
+ border: none;
+ background-color: #7fdada; 
+ color: black;
+ font-size: 1rem;
+}
+.loging button:hover{
+  background-color: white;
+  color: black;
+  box-shadow: rgba(72, 135, 202, 0.8) 0 0 90px 33px;
+  transition: 300ms;
+}
 .hero-section{
   width: 100%;
   height: 89vh;
@@ -70,33 +129,41 @@ header{
   height: 100%;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
-  /* margin-top: 16vh; */
-  /* background-color: yellow; */
 }
 
 .hero-left-main{
-  width: 70%;
-  height: 45%;
-  /* background-color: red; */
+  width: 80%;
+  height: 55%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  margin-top: 10vw;
-   
+  margin-top: 9vw;
+  margin-left: 5vw;
 }
 
-.hero-left-main button {
-  padding: 10px;
+.hero-left-main p{
+  margin-bottom: 10vh;
+}
+
+.hero-left-main button{
+  padding: 16px;
   width: 10vw;
   border-radius: 5px;
   border: none;
-  background-color: #6f6fc5;
-  color: white;
+  background-color: #7fdada;
+  color: black;
+  font-size: 14px;
+}
+
+.hero-left-main button:hover{
+  background-color: white;
+  box-shadow: rgba(72, 135, 202, 0.8) 0 0 90px 33px;
+  color:black;
+  transition: 200ms;
 }
 .hero-left-main h1{
-  font-size: 3.2rem;
-  line-height: 49px;
+  font-size: 3.8rem;
+  line-height: 60px;
 }
 .hero-right{
   width: 50%;
@@ -109,20 +176,48 @@ header{
   width: 100%;
   height: 70%;
   overflow: hidden;
-  /* background-color: red; */
+  /* background-color: blue; */
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 .hero-right-main img {
   width: 170%;
   height: auto;
   object-fit: cover;
+  animation: up-down-motion 4s infinite linear;
 }
-
+.sub-image1{
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  position: absolute;
+  z-index: 1000;
+  margin-left: 15vw;
+  margin-top: 10vw;
+  animation: rotation-motion 8s infinite linear;
+}
+.sub-image2{
+  width: 50px;
+  height: 50px;
+  /* background-color: yellow; */
+  position: absolute;
+  z-index: 1000;
+  margin-left:35vw;
+  margin-bottom: 23vw;
+  animation:  nagetive-up-down 20s infinite linear;
+}
+.sub-image2 img{
+  width: 150%;
+}
 .product-section{
   width: 100%;
-  height: 70vh;
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product-main{
@@ -130,16 +225,24 @@ header{
   height: 100%;
   text-align:center;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+
 }
 
+.product-heading{
+  width: 90%;
+  height: 10vh;
+  text-align: start;
+  font-size: 1.5rem;
+}
 .card-container{
-  width: 80%;
+  width:90vw; 
   height: 90%;
-  display: flex;
-  justify-content: space-around;
+  display: flex !important;
+  justify-content:space-evenly;
   align-items: center;
+  overflow: hidden;
 }
 
 
@@ -151,6 +254,30 @@ header{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  background-color: green;
+
+}
+
+.card-img{
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.card-img img {
+  width: 250%;
+  image-rendering: norpeat;
+}
+.card-content{
+  color: black;
+  height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  
 }
 
 .innovation-section{
@@ -159,15 +286,55 @@ header{
   text-align: center;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  
   
 }
 
+
 .innovation-main{
   width: 80%;
+  height: 70vh;
   display: flex;
+  align-items: center;
   justify-content: space-around;
 }
+
+.card-innvo{
+  width: 20vw;
+  height: 50vh;
+  border-radius: 20px;
+  /* border: 1px solid white; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background: rgba( 255, 255, 255, 0.1 );
+  backdrop-filter: blur( 4.5px );
+  -webkit-backdrop-filter: blur( 4.5px );
+  border-radius: 10px;
+}
+.card-innvo ul li {
+  list-style: none;
+}
+
+.card-innvo:hover{
+  box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+
+}
+
+
+.inno-img{
+  width: 100%;
+  height: 20vh;
+
+}
+
+.inno-img img {
+  width: 40%;
+}
+
+
 
 .aboutus{
   width: 100%;
@@ -186,15 +353,20 @@ header{
   font-size: 1.5rem;
 }
 
-.aboutus-main p {
+.aboutus-main p{
   padding: 20px 10px;
   border: 2px solid white;
-  border-radius: 20px;
-  /* background: rgba(255, 255, 255, 0.5); White background with opacity */
-  border-radius: 10px; /* Optional: Rounded corners */
-  padding: 20px; /* Optional: Add some padding */
-  backdrop-filter: blur(10px); /* Blur the background */
+  border-radius: 10px; 
+  padding: 20px; 
+  font-size: 1rempx;
+  font-weight: 200;
+  margin-top: 4vw;
+  background: rgba( 255, 255, 255, 0.1 );
+  backdrop-filter: blur( 4.5px );
+  -webkit-backdrop-filter: blur( 4.5px );
+  border-radius: 10px;
 }
+
 
 
 .subscribe{
@@ -209,7 +381,7 @@ header{
 }
 
 .subscribe-main{
-  width: 70%;
+  width: 60%;
   height: 57vh;
   background-color:#1C5867;
   border-radius: 20px;
@@ -227,7 +399,6 @@ header{
 .subscribe-main .form-part{
   width: 40%;
   height: 40vh;
-
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -235,18 +406,18 @@ header{
 }
 
 .subscribe-main .form-part input{
-  width: 50%;
+  width: 80%;
   height: 5vh;
   border: 2px solid white;
   border-radius: 4px;
   background: none;
-  color: aliceblue;
+  color:white;
 }
 
 
 
 .subscribe-main .form-part button{
-  padding: 10px;
+  padding: 15px 20px;
   width: 7vw;
   background-color: #6f6fc5;
   border-radius: 10px;
@@ -254,37 +425,96 @@ header{
   color: white;
 }
 
+.subscribe h1{
+  margin-bottom: 20px;  
+
+}
+
+.subscribe-main .form-part button:hover{
+  background-color: white;
+  color: black;
+  box-shadow: rgba(72, 135, 202, 0.8) 0 0 90px 33px;
+  transition: 300ms;  
+}
 
 
-.subscribe-main .image{
+
+.subscribe-image{
   width: 50%;
   height: 40vh;
-  background-color: green;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.subscribe-image img{
+  width: 70%;
 }
 
 .sponsor{
   width: 100%;
-  height: 50vh;
-
+  height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  /* background-color: red; */
 }
 
 .sponsor-main{
-  width: 98%;
-  height: 29vh;
-  background-color: green;
-  
-}
-
-footer {
-  width: 100%;
-  height: 20vh;
+  width: 90%;
+  height: 17vh;
+  background-color: rgb(255, 254, 254);
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  border-radius: 20px;
 }
 
+.sponsor-img {
+  width: 17vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sponsor5-img {
+  width: 13vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.sponsor-img img{
+  width: 60%;
+}
+.sponsor5-img img{
+  width: 100%;
+}
+
+.sponsor-img:hover{
+  transform: scale(1.1);
+  transition: 300ms;
+}
+
+.sponsor5-img:hover{
+  transform: scale(1.1);
+  transition: 300ms;
+}
+footer {
+  width: 100%;
+  height: 25vh;
+  display: flex;
+  flex-direction: column;
+  justify-content:space-between;
+  align-items: center;
+  margin-top: 40px;
+
+  /* background-color: red; */
+}
+
+.main-div{
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+}
 footer .part1{
  display: flex;
  justify-content: space-around;
@@ -296,30 +526,3 @@ footer .part1 ul{
   list-style: none;
 }
 
-.card-innvo{
-  width: 20vw;
-  height: 40vh;
-  border-radius: 20px;
-  border: 2px solid white;
-}
-
-
-.card-img{
-  width: 100%;
-  height: 20vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-}
-
-.card-img img {
-  width: 250%;
-}
-.card-content{
-  color: black;
-  height: 20vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
