--- a/style.css
+++ b/style.css
@@ -191,11 +191,15 @@ header{
 .sub-image1{
   width: 50px;
   height: 50px;
-  background-color: red;
   position: absolute;
   z-index: 1000;
-  margin-left: 15vw;
-  margin-top: 10vw;
+  margin-left: 13vw;
+  margin-top: 7vw;
+}
+
+
+.sub-image1 img{
+  width: 150%;
   animation: rotation-motion 8s infinite linear;
 }
 .sub-image2{
@@ -419,7 +423,7 @@ header{
 .subscribe-main .form-part button{
   padding: 15px 20px;
   width: 7vw;
-  background-color: #6f6fc5;
+  background-color: #7fdada;
   border-radius: 10px;
   border: none;
   color: white;
@@ -511,6 +515,7 @@ footer {
 }
 
 .main-div{
+  margin-top: 100px;
   width: 80%;
   display: flex;
   justify-content: space-between;
